handled collision for random movement