@@ -2,6 +2,7 @@ package jason.eis.movements.collision.handlers;
 
 import jason.eis.Point;
 import java.util.*;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
@@ -12,54 +13,40 @@ public class OscillationHandler {
   private static final boolean DEBUG = true;
   private static final long OSCILLATION_TIMEOUT = 5000;
   private static final int OSCILLATION_THRESHOLD = 3;
+  private static final int PATTERN_HISTORY_SIZE = 9;
+  private static final long PATTERN_TIMEOUT = 2000; // 2 seconds
 
   private final Map<String, OscillationState> agentStates = new HashMap<>();
+  private final Map<String, List<String>> directionHistory = new ConcurrentHashMap<>();
+
+  // Define MovementRecord as a static inner class
+  private static class MovementRecord {
+    final Point position;
+    final String direction;
+    final long timestamp;
+
+    MovementRecord(Point pos, String dir) {
+      this.position = pos;
+      this.direction = dir;
+      this.timestamp = System.currentTimeMillis();
+    }
+  }
 
   private static class OscillationState {
-    List<Point> positions;
-    List<String> directions;
-    int size;
-    int twoStepPatternCount;
-    int threeStepPatternCount;
-    long lastMoveTime;
+    Deque<MovementRecord> movements = new ArrayDeque<>();
+    int patternCount = 0;
+    long lastUpdateTime = System.currentTimeMillis();
 
-    OscillationState(Point startPos, String direction, int size) {
-      this.positions = new ArrayList<>();
-      this.directions = new ArrayList<>();
-      this.positions.add(startPos);
-      this.directions.add(direction);
-      this.size = size;
-      this.twoStepPatternCount = 0;
-      this.threeStepPatternCount = 0;
-      this.lastMoveTime = System.currentTimeMillis();
-    }
-
-    boolean isOscillating() {
-      return (
-        (
-          twoStepPatternCount >= OSCILLATION_THRESHOLD ||
-          threeStepPatternCount >= OSCILLATION_THRESHOLD
-        ) &&
-        (System.currentTimeMillis() - lastMoveTime) < OSCILLATION_TIMEOUT
-      );
-    }
-
-    void addMove(Point pos, String direction) {
-      positions.add(pos);
-      directions.add(direction);
-
-      // Keep only last 6 positions and directions (for 3-step pattern checking)
-      if (positions.size() > 6) {
-        positions.remove(0);
-        directions.remove(0);
+    void addMovement(Point pos, String dir) {
+      movements.addLast(new MovementRecord(pos, dir));
+      if (movements.size() > PATTERN_HISTORY_SIZE) {
+        movements.removeFirst();
       }
-      lastMoveTime = System.currentTimeMillis();
+      lastUpdateTime = System.currentTimeMillis();
     }
 
-    String getOscillationType() {
-      if (twoStepPatternCount >= OSCILLATION_THRESHOLD) return "TWO_STEP";
-      if (threeStepPatternCount >= OSCILLATION_THRESHOLD) return "THREE_STEP";
-      return null;
+    void resetPatternCount() {
+      patternCount = 0;
     }
   }
 
@@ -85,59 +72,46 @@ public class OscillationHandler {
 
       OscillationState state = agentStates.get(agentId);
       if (state == null) {
-        state = new OscillationState(currentPos, intendedDirection, size);
+        state = new OscillationState();
         agentStates.put(agentId, state);
         return null;
       }
 
       // Check if size changed
-      if (state.size != size) {
+      if (
+        state.movements.size() > 0 &&
+        state.movements.getLast().position.x != currentPos.x
+      ) {
         agentStates.remove(agentId);
         return null;
       }
 
       // Add new move to state
-      state.addMove(currentPos, intendedDirection);
+      state.addMovement(currentPos, intendedDirection);
 
-      // Check for 2-step oscillation
-      if (state.positions.size() >= 2) {
-        if (isTwoStepPattern(state)) {
-          state.twoStepPatternCount++;
-          if (DEBUG) {
-            logger.info(
-              String.format(
-                "2-step pattern detected (%d times): %s",
-                state.twoStepPatternCount,
-                state.positions.subList(
-                  state.positions.size() - 2,
-                  state.positions.size()
-                )
-              )
-            );
-          }
+      // Check for oscillation
+      if (detectPattern(state.movements)) {
+        state.patternCount++;
+        if (DEBUG) {
+          logger.info(
+            String.format(
+              "Oscillation detected (%d times): %s",
+              state.patternCount,
+              state
+                .movements.stream()
+                .map(m -> m.position.toString())
+                .collect(Collectors.joining(", "))
+            )
+          );
         }
+      } else {
+        state.resetPatternCount();
       }
 
-      // Check for 3-step oscillation
-      if (state.positions.size() >= 3) {
-        if (isThreeStepPattern(state)) {
-          state.threeStepPatternCount++;
-          if (DEBUG) {
-            logger.info(
-              String.format(
-                "3-step pattern detected (%d times): %s",
-                state.threeStepPatternCount,
-                state.positions.subList(
-                  state.positions.size() - 3,
-                  state.positions.size()
-                )
-              )
-            );
-          }
-        }
-      }
-
-      if (state.isOscillating()) {
+      if (
+        state.patternCount >= OSCILLATION_THRESHOLD &&
+        (System.currentTimeMillis() - state.lastUpdateTime) < PATTERN_TIMEOUT
+      ) {
         return resolveOscillatingMove(
           state,
           availableDirections,
@@ -153,44 +127,49 @@ public class OscillationHandler {
     }
   }
 
-  private boolean isTwoStepPattern(OscillationState state) {
-    if (state.positions.size() < 2) return false;
+  private boolean detectPattern(Deque<MovementRecord> movements) {
+    if (movements.size() < 4) return false;
 
-    Point lastPos = state.positions.get(state.positions.size() - 1);
-    Point secondLastPos = state.positions.get(state.positions.size() - 2);
+    List<MovementRecord> recent = new ArrayList<>(movements);
 
-    // Check if we're alternating between two positions
-    return (
-      lastPos.equals(state.positions.get(state.positions.size() - 1)) &&
-      secondLastPos.equals(state.positions.get(state.positions.size() - 2))
-    );
-  }
+    // Two-step pattern check with null safety
+    String lastDir = recent.get(recent.size() - 1).direction;
+    String prevDir = recent.get(recent.size() - 2).direction;
+    if (lastDir != null && prevDir != null && isOpposite(lastDir, prevDir)) {
+      return true;
+    }
 
-  private boolean isThreeStepPattern(OscillationState state) {
-    if (state.positions.size() < 6) return false; // Need at least 6 positions to check for repeat
+    // Three-step pattern check
+    if (movements.size() >= 9) {
+      List<String> lastThree = new ArrayList<>();
+      List<String> middleThree = new ArrayList<>();
+      List<String> firstThree = new ArrayList<>();
 
-    List<Point> currentPattern = state.positions.subList(
-      state.positions.size() - 3,
-      state.positions.size()
-    );
-    List<String> currentDirPattern = state.directions.subList(
-      state.directions.size() - 3,
-      state.directions.size()
-    );
+      // Manually collect non-null directions into lists
+      for (int i = recent.size() - 3; i < recent.size(); i++) {
+        String dir = recent.get(i).direction;
+        if (dir == null) return false; // Skip pattern check if any direction is null
+        lastThree.add(dir);
+      }
+      for (int i = recent.size() - 6; i < recent.size() - 3; i++) {
+        String dir = recent.get(i).direction;
+        if (dir == null) return false;
+        middleThree.add(dir);
+      }
+      for (int i = recent.size() - 9; i < recent.size() - 6; i++) {
+        String dir = recent.get(i).direction;
+        if (dir == null) return false;
+        firstThree.add(dir);
+      }
 
-    List<Point> previousPattern = state.positions.subList(
-      state.positions.size() - 6,
-      state.positions.size() - 3
-    );
-    List<String> previousDirPattern = state.directions.subList(
-      state.directions.size() - 6,
-      state.directions.size() - 3
-    );
+      return (
+        lastThree.equals(middleThree) ||
+        lastThree.equals(firstThree) ||
+        middleThree.equals(firstThree)
+      );
+    }
 
-    return (
-      currentPattern.equals(previousPattern) &&
-      currentDirPattern.equals(previousDirPattern)
-    );
+    return false;
   }
 
   private String resolveOscillatingMove(
@@ -203,16 +182,23 @@ public class OscillationHandler {
         return null;
       }
 
-      String oscillationType = state.getOscillationType();
+      String oscillationType = detectPattern(state.movements)
+        ? "TWO_STEP"
+        : "THREE_STEP";
       if (DEBUG) {
         logger.info("Resolving " + oscillationType + " oscillation");
       }
 
-      Set<String> oscillatingDirs = new HashSet<>(state.directions);
+      Set<String> oscillatingDirs = new HashSet<>(
+        state
+          .movements.stream()
+          .map(m -> m.direction)
+          .collect(Collectors.toList())
+      );
 
       // For 2-step oscillation, prefer perpendicular directions
       if ("TWO_STEP".equals(oscillationType)) {
-        String lastDir = state.directions.get(state.directions.size() - 1);
+        String lastDir = state.movements.getLast().direction;
         List<String> perpDirs = getPerpendicularDirections(
           lastDir,
           blockAttachment
@@ -260,8 +246,8 @@ public class OscillationHandler {
     switch (direction) {
       case "n":
       case "s":
-        perpDirs.add("w");
         perpDirs.add("e");
+        perpDirs.add("w");
         break;
       case "e":
       case "w":
@@ -283,6 +269,7 @@ public class OscillationHandler {
   }
 
   private String getOppositeDirection(String direction) {
+    if (direction == null) return null;
     switch (direction) {
       case "n":
         return "s";
@@ -294,6 +281,80 @@ public class OscillationHandler {
         return "e";
       default:
         return null;
+    }
+  }
+
+  private boolean isOpposite(String dir1, String dir2) {
+    if (dir1 == null || dir2 == null) return false;
+
+    switch (dir1) {
+      case "n":
+        return dir2.equals("s");
+      case "s":
+        return dir2.equals("n");
+      case "e":
+        return dir2.equals("w");
+      case "w":
+        return dir2.equals("e");
+      default:
+        return false;
+    }
+  }
+
+  private Set<String> getRecentOscillationDirections(String agentName) {
+    Set<String> recentDirs = new HashSet<>();
+    OscillationState state = agentStates.get(agentName);
+    if (state != null) {
+      for (MovementRecord m : state.movements) {
+        recentDirs.add(m.direction);
+      }
+    }
+    return recentDirs;
+  }
+
+  private void clearOscillationHistory(String agentName) {
+    agentStates.remove(agentName);
+  }
+
+  private void recordDirection(String agentName, String direction) {
+    // Keep track of last few directions to prevent immediate backtracking
+    List<String> dirHistory = directionHistory.computeIfAbsent(
+      agentName,
+      k -> new ArrayList<>()
+    );
+    dirHistory.add(direction);
+    if (dirHistory.size() > 5) { // Keep last 5 directions
+      dirHistory.remove(0);
+    }
+  }
+
+  private String getDirectionBetweenPoints(Point from, Point to) {
+    if (to.x > from.x) return "e";
+    if (to.x < from.x) return "w";
+    if (to.y > from.y) return "s";
+    if (to.y < from.y) return "n";
+    return null; // Points are the same
+  }
+
+  public void updateState(String agentId, Point pos, String dir) {
+    if (dir == null) return; // Don't update state if direction is null
+
+    OscillationState state = agentStates.computeIfAbsent(
+      agentId,
+      k -> new OscillationState()
+    );
+
+    if (System.currentTimeMillis() - state.lastUpdateTime > PATTERN_TIMEOUT) {
+      state.movements.clear();
+      state.resetPatternCount();
+    }
+
+    state.addMovement(pos, dir);
+
+    if (detectPattern(state.movements)) {
+      state.patternCount++;
+    } else {
+      state.resetPatternCount();
     }
   }
 }
